# nutdart

./: .metadata  README.md  WAYLAND_SUPPORT.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/nutdart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: nutdart.podspec
lib/: nutdart.dart  nutdart_bindings_generated.dart
lib/src/: nutdart_model.dart  nutdart_real.dart  nutdart_stub.dart
linux/: CMakeLists.txt
macos/: nutdart.podspec
macos/Classes/: c_sources.c  nutdart.c  objc_arc_sources.m  objc_noarc_sources.m  objcpp_sources.mm
src/: CMakeLists.txt  JPEG_README.md  computer_use.c  computer_use.h  nutdart.c  nutdart.h  screencapturekit_bridge.h
src/linux/: screengrab.c  screengrab_jpeg.c  screengrab_wayland.c
src/macos/: BridgingHeader.h  ScreenCaptureKitWrapper.swift  keycode.c  screencapturekit_bridge.mm  screencapturekit_bridge.mm.backup  screencapturekit_objc.m  screengrab.m
src/win32/: screengrab_jpeg.c  window_manager.cc
test/: nutdart_demo_test.dart  nutdart_test.dart
windows/: CMakeLists.txt  nutdart_plugin.cpp  nutdart_plugin.h  nutdart_plugin_c_api.cpp
windows/include/nutdart/: nutdart_plugin_c_api.h
